--- a/index.html
+++ b/index.html
@@ -587,13 +587,31 @@
                         <div id="phd-ongoing" class="sub-tab-content active">
                             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                                 <div class="card bg-white rounded-xl shadow-md p-6 text-center">
-                                    <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
-                                    <h3 class="text-xl font-semibold text-gray-900">Alex Carter</h3>
+                                    <img src="people\vijayakumar.jpg" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                                <a href="#" target="_blank">
+                                    <h3 class="text-xl font-semibold text-gray-900">Vijayakumar S.</h3>
+                                </a>
                                     <p class="text-gray-600">Ph.D Candidate</p>
                                 </div>
                                 <div class="card bg-white rounded-xl shadow-md p-6 text-center">
-                                    <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
-                                    <h3 class="text-xl font-semibold text-gray-900">Sarah Lee</h3>
+                                    <img src="people\jawahar.jpg" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                                <a href="#" target="_blank">
+                                    <h3 class="text-xl font-semibold text-gray-900">Jawahar Prakash</h3>
+                                </a>
+                                    <p class="text-gray-600">Ph.D Candidate</p>
+                                </div>
+                                <div class="card bg-white rounded-xl shadow-md p-6 text-center">
+                                    <img src="people\durga.jpeg" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                                <a href="#" target="_blank">
+                                    <h3 class="text-xl font-semibold text-gray-900">Durga Prasad Pydi</h3>
+                                </a>
+                                    <p class="text-gray-600">Ph.D Candidate</p>
+                                </div>
+                                <div class="card bg-white rounded-xl shadow-md p-6 text-center">
+                                    <img src="people\suprana.jpeg" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                                <a href="#" target="_blank">
+                                    <h3 class="text-xl font-semibold text-gray-900">Suparna Dhara</h3>
+                                </a>
                                     <p class="text-gray-600">Ph.D Candidate</p>
                                 </div>
                             </div>
@@ -618,13 +636,17 @@
                         <div id="ms-ongoing" class="sub-tab-content active">
                             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                                 <div class="card bg-white rounded-xl shadow-md p-6 text-center">
-                                    <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
-                                    <h3 class="text-xl font-semibold text-gray-900">Rachel Wong</h3>
+                                    <img src="sachin.jpg" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                                <a href="#" target="_blank">
+                                    <h3 class="text-xl font-semibold text-gray-900">Sachin Angad Kharsade</h3>
+                                </a>
                                     <p class="text-gray-600">MS Student</p>
                                 </div>
                                 <div class="card bg-white rounded-xl shadow-md p-6 text-center">
-                                    <img src="https://images.unsplash.com/photo-1531123897727-8f129e1688ce?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
-                                    <h3 class="text-xl font-semibold text-gray-900">James Liu</h3>
+                                    <img src="people\amit.jpg" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                                <a href="#" target="_blank">
+                                    <h3 class="text-xl font-semibold text-gray-900">Amit Kumar Goswami</h3>
+                                </a>
                                     <p class="text-gray-600">MS Student</p>
                                 </div>
                             </div>
@@ -632,14 +654,11 @@
                         <div id="ms-alumni" class="sub-tab-content">
                             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                                 <div class="card bg-white rounded-xl shadow-md p-6 text-center">
-                                    <img src="https://images.unsplash.com/photo-1506794778202-6d103f6e0e0c?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
-                                    <h3 class="text-xl font-semibold text-gray-900">Mark Chen</h3>
-                                    <p class="text-gray-600">MS (Graduated 2023)</p>
-                                </div>
-                                <div class="card bg-white rounded-xl shadow-md p-6 text-center">
-                                    <img src="https://images.unsplash.com/photo-1517365830460-955ce3f6b1f7?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
-                                    <h3 class="text-xl font-semibold text-gray-900">Anita Sharma</h3>
-                                    <p class="text-gray-600">MS (Graduated 2022)</p>
+                                    <img src="people\naresh.jpg" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                                <a href="#" target="_blank">
+                                    <h3 class="text-xl font-semibold text-gray-900">Naresh Chandora</h3>
+                                </a>
+                                    <p class="text-gray-600">MS (Graduated 2024)</p>
                                 </div>
                             </div>
                         </div>
