--- a/index.html
+++ b/index.html
@@ -667,14 +667,9 @@
                 <div id="staff" class="tab-content">
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                         <div class="card bg-white rounded-xl shadow-md p-6 text-center">
-                            <img src="https://images.unsplash.com/photo-1522529599102-193c0d76b5b6?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
-                            <h3 class="text-xl font-semibold text-gray-900">Michael Brown</h3>
-                            <p class="text-gray-600">Lab Manager</p>
-                        </div>
-                        <div class="card bg-white rounded-xl shadow-md p-6 text-center">
-                            <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
-                            <h3 class="text-xl font-semibold text-gray-900">Emma Wilson</h3>
-                            <p class="text-gray-600">Administrative Assistant</p>
+                            <img src="people\antro.jpg" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                            <h3 class="text-xl font-semibold text-gray-900">Antro Jagatheesh</h3>
+                            <p class="text-gray-600">Senior Technician</p>
                         </div>
                     </div>
                 </div>
