--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
                 <div class="mt-4 flex justify-center space-x-6">
                     <a href="https://github.com" class="hover:text-blue-400 transition">GitHub</a>
                     <a href="https://twitter.com" class="hover:text-blue-400 transition">Twitter</a>
-                    <a href="https://linkedin.com" class="hover:text-blue-400 transition">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/advaithsankar/" class="hover:text-blue-400 transition"> <img src="logo/LinkedIn_logo.png"> </a>
                 </div>
             </div>
         </div>
