--- a/index.html
+++ b/index.html
@@ -772,20 +772,20 @@
                                     <svg class="h-6 w-6 text-pink-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.948V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path>
                                     </svg>
-                                    <p class="text-gray-600">+1 (555) 123-4567</p>
+                                    <p class="text-gray-600">+91 (044) ---- 4670</p>
                                 </div>
                                 <div class="flex items-center">
                                     <svg class="h-6 w-6 text-pink-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
                                     </svg>
-                                    <a href="mailto:research.group@example.com" class="text-gray-600 hover:text-blue-600">research.group@example.com</a>
+                                    <a href="mailto:advaith[at]iitm[.]ac[.]in" class="text-gray-600 hover:text-blue-600">advaith[at]iitm[.]ac[.]in</a>
                                 </div>
                                 <div class="flex items-start">
                                     <svg class="h-6 w-6 text-pink-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path>
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
                                     </svg>
-                                    <p class="text-gray-600">123 Research Avenue, New York, NY 10001, USA</p>
+                                    <p class="text-gray-600">Room No. : 140, NAC-2, Department of Mechanical Engineering, Indian Institute Of Technology Madras, Chennai, Tamil Nadu India PIN : 600036</p>
                                 </div>
                             </div>
                         </div>
@@ -814,7 +814,7 @@
                     <!-- Google Map -->
                     <div class="contact-map">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.241264562135!2d-73.987843684594!3d40.74844097932847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259a9b3117469%3A0xd134e199a405a163!2sEmpire%20State%20Building!5e0!3m2!1sen!2sus!4v1635874662114!5m2!1sen!2sus"
+                            src="https://www.google.com/maps/place/New+Acadamic+Complex+2+-+NAC2+block/@12.9907714,80.2274299,19z/data=!4m6!3m5!1s0x3a52673043960081:0xd18bd9bbda35314e!8m2!3d12.9910923!4d80.2274318!16s%2Fg%2F11sswy4t7n!5m1!1e1?entry=ttu&g_ep=EgoyMDI1MDYwNC4wIKXMDSoASAFQAw%3D%3D"
                             width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy">
                         </iframe>
                     </div>
@@ -829,8 +829,8 @@
             <div class="text-center">
                 <p class="text-sm">© 2025 Research Group. All rights reserved.</p>
                 <div class="mt-4 flex justify-center space-x-6">
-                    <a href="https://github.com" class="hover:text-blue-400 transition">GitHub</a>
-                    <a href="https://twitter.com" class="hover:text-blue-400 transition">Twitter</a>
+                    <a href="https://scholar.google.com/citations?user=HUUzcSUAAAAJ&hl=en&oi=ao" class="hover:text-blue-400 transition"> <img src="logo/Google_Scholar_logo.png"> </a>
+                    <a href="https://www.researchgate.net/profile/Advaith-S" class="hover:text-blue-400 transition"> <img src="logo/RG_logo.jpg"> </a>
                     <a href="https://www.linkedin.com/in/advaithsankar/" class="hover:text-blue-400 transition"> <img src="logo/LinkedIn_logo.png"> </a>
                 </div>
             </div>
