--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
                     <!-- Google Map -->
                     <div class="contact-map">
                         <iframe
-                            src="https://www.google.com/maps/place/New+Acadamic+Complex+2+-+NAC2+block/@12.9907714,80.2274299,19z/data=!4m6!3m5!1s0x3a52673043960081:0xd18bd9bbda35314e!8m2!3d12.9910923!4d80.2274318!16s%2Fg%2F11sswy4t7n!5m1!1e1?entry=ttu&g_ep=EgoyMDI1MDYwNC4wIKXMDSoASAFQAw%3D%3D"
+                            href="https://www.google.com/maps/place/New+Acadamic+Complex+2+-+NAC2+block/@12.9907714,80.2274299,19z/data=!4m6!3m5!1s0x3a52673043960081:0xd18bd9bbda35314e!8m2!3d12.9910923!4d80.2274318!16s%2Fg%2F11sswy4t7n!5m1!1e1?entry=ttu&g_ep=EgoyMDI1MDYwNC4wIKXMDSoASAFQAw%3D%3D"
                             width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy">
                         </iframe>
                     </div>
