--- a/index.html
+++ b/index.html
@@ -813,10 +813,10 @@
                     </div>
                     <!-- Google Map -->
                     <div class="contact-map">
-                        <iframe
-                            href="https://www.google.com/maps/place/New+Acadamic+Complex+2+-+NAC2+block/@12.9907714,80.2274299,19z/data=!4m6!3m5!1s0x3a52673043960081:0xd18bd9bbda35314e!8m2!3d12.9910923!4d80.2274318!16s%2Fg%2F11sswy4t7n!5m1!1e1?entry=ttu&g_ep=EgoyMDI1MDYwNC4wIKXMDSoASAFQAw%3D%3D"
-                            width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy">
-                        </iframe>
+                            <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d134!2d80.2274318!3d12.9910923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52673043960081%3A0xd18bd9bbda35314e!2sNew%20Academic%20Complex%202%20-%20NAC2%20block!5e1!3m2!1sen!2sus!4v1698799999999!5m2!1sen!2sus"
+                                    width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy">                                    
+                            </iframe>
                     </div>
                 </div>
             </div>
