--- a/index.html
+++ b/index.html
@@ -342,9 +342,20 @@
     <section id="home" class="relative min-h-screen">
         <div class="carousel">
             <div class="carousel-inner">
-                <div class="carousel-slide" style="background-image: url('https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80')"></div>
-                <div class="carousel-slide" style="background-image: url('https://images.unsplash.com/photo-1504639725590-34d0984388bd?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80')"></div>
-                <div class="carousel-slide" style="background-image: url('https://images.unsplash.com/photo-1531482615713-2afd674bf4ac?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/IITMadras.jpg')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/7205322480_Babbler in iitm.jpeg')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/7205322480_Black buck-fight.jpeg')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/7205322480_deer-Fawn.jpeg')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/7205322480_deer-Mother and cub.jpeg')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/7205322480_deer-WhatsApp Image 2020-03-01 at 1.52.30 AM (1).jpeg')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/7205322480_Indian paradise flycatcher.jpeg')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/8379826137_The New Academic complex when fully operational.jpeg')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/8825948475_flower-Beside Open Air Theatre.jpeg')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/9003113088_Black buck runnin in front of Mahanadhi - Swarup Potta, ME13B147.jpeg')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/9003113088_Sunrise and sunset from Narmad rooftop.jpeg')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/9176263325_monkey-WhatsApp Image 2020-03-04 at 1.25.58 AM (1).jpeg')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/9994025321_black buck-Near Cauvery Hostel (2).jpeg')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/The buck, Gajendra Circle  and library in one shot the three epic things in our campus.jpeg')"></div>
             </div>
             <div class="absolute inset-0 hero-overlay"></div>
             <div class="carousel-nav">
@@ -814,7 +825,7 @@
                     <!-- Google Map -->
                     <div class="contact-map">
                         <iframe
-                            src="https://www.google.com/maps/place/New+Acadamic+Complex+2+-+NAC2+block/@12.9915008,80.2272173,18.75z/data=!4m6!3m5!1s0x3a52673043960081:0xd18bd9bbda35314e!8m2!3d12.9910923!4d80.2274318!16s%2Fg%2F11sswy4t7n!5m1!1e1?entry=ttu&g_ep=EgoyMDI1MDYwNC4wIKXMDSoASAFQAw%3D%3D"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d100!2d80.2274318!3d12.9910923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52673043960081%3A0xd18bd9bbda35314e!2sNew%20Academic%20Complex%202%20-%20NAC2%20block!5e1!3m2!1sen!2sus!4v1698800000001!5m2!1sen!2sus"
                             width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy">
                         </iframe>
                     </div>
