--- a/index.html
+++ b/index.html
@@ -362,6 +362,17 @@
                 <div class="carousel-dot active" data-slide="0"></div>
                 <div class="carousel-dot" data-slide="1"></div>
                 <div class="carousel-dot" data-slide="2"></div>
+                <div class="carousel-dot" data-slide="3"></div>
+                <div class="carousel-dot active" data-slide="4"></div>
+                <div class="carousel-dot" data-slide="5"></div>
+                <div class="carousel-dot" data-slide="6"></div>
+                <div class="carousel-dot" data-slide="7"></div>
+                <div class="carousel-dot active" data-slide="8"></div>
+                <div class="carousel-dot" data-slide="9"></div>
+                <div class="carousel-dot" data-slide="10"></div>
+                <div class="carousel-dot" data-slide="11"></div>
+                <div class="carousel-dot active" data-slide="12"></div>
+                <div class="carousel-dot" data-slide="13"></div>
             </div>
         </div>
         <div class="absolute inset-0 flex items-center justify-center z-10">
