--- a/index.html
+++ b/index.html
@@ -342,20 +342,9 @@
     <section id="home" class="relative min-h-screen">
         <div class="carousel">
             <div class="carousel-inner">
-                <div class="carousel-slide" style="background-image: url('header_img/IITMadras.jpg')"></div>
-                <div class="carousel-slide" style="background-image: url('header_img/7205322480_Babbler in iitm.jpeg')"></div>
-                <div class="carousel-slide" style="background-image: url('header_img/7205322480_Black buck-fight.jpeg')"></div>
-                <div class="carousel-slide" style="background-image: url('header_img/7205322480_deer-Fawn.jpeg')"></div>
-                <div class="carousel-slide" style="background-image: url('header_img/7205322480_deer-Mother and cub.jpeg')"></div>
-                <div class="carousel-slide" style="background-image: url('header_img/7205322480_deer-WhatsApp Image 2020-03-01 at 1.52.30 AM (1).jpeg')"></div>
-                <div class="carousel-slide" style="background-image: url('header_img/7205322480_Indian paradise flycatcher.jpeg')"></div>
-                <div class="carousel-slide" style="background-image: url('header_img/8379826137_The New Academic complex when fully operational.jpeg')"></div>
-                <div class="carousel-slide" style="background-image: url('header_img/8825948475_flower-Beside Open Air Theatre.jpeg')"></div>
-                <div class="carousel-slide" style="background-image: url('header_img/9003113088_Black buck runnin in front of Mahanadhi - Swarup Potta, ME13B147.jpeg')"></div>
-                <div class="carousel-slide" style="background-image: url('header_img/9003113088_Sunrise and sunset from Narmad rooftop.jpeg')"></div>
-                <div class="carousel-slide" style="background-image: url('header_img/9176263325_monkey-WhatsApp Image 2020-03-04 at 1.25.58 AM (1).jpeg')"></div>
-                <div class="carousel-slide" style="background-image: url('header_img/9994025321_black buck-Near Cauvery Hostel (2).jpeg')"></div>
-                <div class="carousel-slide" style="background-image: url('header_img/The buck, Gajendra Circle  and library in one shot the three epic things in our campus.jpeg')"></div>
+                <div class="carousel-slide" style="background-image: url('https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80')"></div>
+                <div class="carousel-slide" style="background-image: url('https://images.unsplash.com/photo-1504639725590-34d0984388bd?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80')"></div>
+                <div class="carousel-slide" style="background-image: url('https://images.unsplash.com/photo-1531482615713-2afd674bf4ac?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80')"></div>
             </div>
             <div class="absolute inset-0 hero-overlay"></div>
             <div class="carousel-nav">
@@ -363,16 +352,6 @@
                 <div class="carousel-dot" data-slide="1"></div>
                 <div class="carousel-dot" data-slide="2"></div>
                 <div class="carousel-dot" data-slide="3"></div>
-                <div class="carousel-dot active" data-slide="4"></div>
-                <div class="carousel-dot" data-slide="5"></div>
-                <div class="carousel-dot" data-slide="6"></div>
-                <div class="carousel-dot" data-slide="7"></div>
-                <div class="carousel-dot active" data-slide="8"></div>
-                <div class="carousel-dot" data-slide="9"></div>
-                <div class="carousel-dot" data-slide="10"></div>
-                <div class="carousel-dot" data-slide="11"></div>
-                <div class="carousel-dot active" data-slide="12"></div>
-                <div class="carousel-dot" data-slide="13"></div>
             </div>
         </div>
         <div class="absolute inset-0 flex items-center justify-center z-10">
