--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
     <section id="home" class="relative min-h-screen">
         <div class="carousel">
             <div class="carousel-inner">
+                <div class="carousel-slide" style="background-image: url('header_img/IITMadras.jpg')"></div>
                 <div class="carousel-slide" style="background-image: url('https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80')"></div>
                 <div class="carousel-slide" style="background-image: url('https://images.unsplash.com/photo-1504639725590-34d0984388bd?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80')"></div>
                 <div class="carousel-slide" style="background-image: url('https://images.unsplash.com/photo-1531482615713-2afd674bf4ac?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80')"></div>
