--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             transition: transform 0.8s ease-in-out;
         }
         .carousel-slide {
-            flex: 0 0 50%;
+            flex: 0 0 10%;
             width: 100%;
             height: 100%;
             background-size: cover;
@@ -568,9 +568,9 @@
                 <div id="guide" class="tab-content active">
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                         <div class="card bg-white rounded-xl shadow-md p-6 text-center">
-                            <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
-                            <h3 class="text-xl font-semibold text-gray-900">Dr. Jane Doe</h3>
-                            <p class="text-gray-600">Principal Investigator</p>
+                            <img src="people/advaith.png" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                            <h3 class="text-xl font-semibold text-gray-900">Dr. Advaith Sankar</h3>
+                            <p class="text-gray-600">Assistant Professor</p>
                         </div>
                     </div>
                 </div>
