--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
             display: block;
         }
         .carousel {
-            position: relative;
+            position: absolute;
             width: 100%;
-            height: 50%;
+            height: 100%;
             overflow: hidden;
         }
         .carousel-inner {
