--- a/index.html
+++ b/index.html
@@ -165,6 +165,15 @@
             height: 100%;
             background-size: cover;
             background-position: center;
+            position: relative;
+        }
+        .carousel-slide img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
         }
         .carousel-nav {
             position: absolute;
