--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         }
         .carousel-inner {
             display: flex;
-            width: 300%;
+            width: 100%;
             height: 100%;
             transition: transform 0.8s ease-in-out;
         }
@@ -171,7 +171,7 @@
             width: 50%;
             height: 50%;
             object-fit: cover;
-            position: absolute;
+            position: relative;
             top: 0;
             left: 0;
         }
