--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         }
         .carousel {
             position: absolute;
-            width: 100%;
+            width: 90%;
             height: 100%;
             overflow: hidden;
         }
@@ -352,9 +352,11 @@
         <div class="carousel">
             <div class="carousel-inner">
                 <div class="carousel-slide" style="background-image: url('header_img/IITMadras.jpg')"></div>
-                <div class="carousel-slide" style="background-image: url('https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80')"></div>
-                <div class="carousel-slide" style="background-image: url('https://images.unsplash.com/photo-1504639725590-34d0984388bd?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80')"></div>
-                <div class="carousel-slide" style="background-image: url('https://images.unsplash.com/photo-1531482615713-2afd674bf4ac?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/7205322480_Babbler in iitm.jpeg')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/7205322480_Indian paradise flycatcher.jpeg')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/8379826137_The New Academic complex when fully operational.jpeg')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/The buck, Gajendra Circle  and library in one shot the three epic things in our campus.jpeg')"></div>
+                <div class="carousel-slide" style="background-image: url('header_img/9003113088_Sunrise and sunset from Narmad rooftop.jpeg')"></div>
             </div>
             <div class="absolute inset-0 hero-overlay"></div>
             <div class="carousel-nav">
@@ -362,6 +364,8 @@
                 <div class="carousel-dot" data-slide="1"></div>
                 <div class="carousel-dot" data-slide="2"></div>
                 <div class="carousel-dot" data-slide="3"></div>
+                <div class="carousel-dot" data-slide="4"></div>
+                <div class="carousel-dot" data-slide="5"></div>
             </div>
         </div>
         <div class="absolute inset-0 flex items-center justify-center z-10">
