--- a/index.html
+++ b/index.html
@@ -503,6 +503,26 @@
                         <button class="sub-tab px-6 py-2 rounded-md font-medium text-gray-800 bg-gray-200 hover:bg-gray-300" data-sub-tab="conference-2023">2023</button>
                     </div>
                     <!-- Sub-Tab Content -->
+                    <div id="conference-2025" class="sub-tab-content">
+                        <div class="space-y-6">
+                            <div class="publication-item bg-white rounded-xl shadow-md p-6 flex items-start space-x-4">
+                                <img src="images_J_C\conference\ICP2025.JPG" alt="ICP2025 Cover" class="publication-cover">
+                                <div>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Experimental Studies on Compact Desalination System</h3>
+                                    <p class="text-gray-600">Thilagan K., Advaith S., Mani. A. <em>International Conference on Polygeneration 2025, 09-11 October 2025, Antalya, Türkiye</em>. <a href="https://www.polygeneration.net/" style="color: blue;">Read article</a></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="space-y-6">
+                            <div class="publication-item bg-white rounded-xl shadow-md p-6 flex items-start space-x-4">
+                                <img src="images_J_C\conference\ICP2025.JPG" alt="ICP2025 Cover" class="publication-cover">
+                                <div>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Thermodynamic and Performance analysis of an energy- efficient low-temperature grey water treatment system</h3>
+                                    <p class="text-gray-600">Prakash Koundinyan G., Thilagan K., Advaith S., Srikrishna Sahu <em>International Conference on Polygeneration 2025, 09-11 October 2025, Antalya, Türkiye</em>. <a href="https://www.polygeneration.net/" style="color: blue;">Read article</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div id="conference-2024" class="sub-tab-content">
                         <div class="space-y-6">
                             <div class="publication-item bg-white rounded-xl shadow-md p-6 flex items-start space-x-4">
@@ -680,6 +700,13 @@
                     </div>
                 </div>
                 <div id="staff" class="tab-content">
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                        <div class="card bg-white rounded-xl shadow-md p-6 text-center">
+                            <img src="people\antro.jpg" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
+                            <h3 class="text-xl font-semibold text-gray-900">Prakash Koundinyan G</h3>
+                            <p class="text-gray-600">Project Officer</p>
+                        </div>
+                    </div>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                         <div class="card bg-white rounded-xl shadow-md p-6 text-center">
                             <img src="people\antro.jpg" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
