--- a/index.html
+++ b/index.html
@@ -537,10 +537,10 @@
                     <div id="conference-2023" class="sub-tab-content">
                         <div class="space-y-6">
                             <div class="publication-item bg-white rounded-xl shadow-md p-6 flex items-start space-x-4">
-                                <img src="https://images.unsplash.com/photo-1516321497487-e288fb19713f?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&q=80" alt="Conference Proceedings Cover" class="publication-cover">
+                                <img src="images_J_C\conference\FMFP2023.JPG" alt="FMFP2023.JPG Cover" class="publication-cover">
                                 <div>
-                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">"Quantum Cryptography: New Frontiers in Security"</h3>
-                                    <p class="text-gray-600">Brown, E., & Smith, J. (2023). <em>Proceedings of the International Conference on Quantum Computing</em>.</p>
+                                    <h3 class="text-xl font-semibold text-gray-900 mb-2">Experimental Studies on Falling Film Thickness Measurement on Inclined Plates with and Without Surface Modification</h3>
+                                    <p class="text-gray-600">Naresh Khimaram Chandora, Advaith S., Mani. A. <em>10th International and 50th National Conference on Fluid Mechanics and Fluid Power, 20-22 December 2023, IIT Jodhpur, India</em>. <a href="https://link.springer.com/chapter/10.1007/978-981-97-6776-2_13" style="color: blue;">Read article</a></p>
                                 </div>
                             </div>
                         </div>
