--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                                 <div class="card bg-white rounded-xl shadow-md p-6 text-center">
                                     <img src="people\thilagan.JPEG" alt="Team Member" class="w-28 h-28 rounded-full mx-auto mb-4">
-                                <a href="https://thilagan-k.github.io/T5/thilagan/thilagan.html" target="_blank">
+                                <a href="https://thilagan-k.github.io/Research-Profile/" target="_blank">
                                     <h3 class="text-xl font-semibold text-gray-900">Dr. Thilagan K.</h3>
                                 </a>
                                     <p class="text-gray-600">Ph.D (Graduated 2025)</p>
